# hmatrix-segfault

./: README.md  hmatrix-segfault.cabal
exe/: Main.hs
src/Internal/: Vectorized.hs
src/Internal/C/: vector-aux.c
