Name:               hmatrix-segfault
Version:            0.18.0.0
License:            BSD3
License-file:       LICENSE
Author:             Alberto Ruiz
cabal-version:      >=1.8
build-type:         Simple

library
    build-depends:      base   >= 4.3 && < 5,
                        vector == 0.12.0.1
    hs-source-dirs:     src
    exposed-modules:    Internal.Vectorized
    c-sources:          src/Internal/C/vector-aux.c
    cc-options:         -O4

executable hmatrix-segfault
    main-is:            Main.hs
    build-depends:      base, hmatrix-segfault, vector
    hs-source-dirs:     exe
    ghc-options:        -Wall
