Name:               hmatrix-segfault
Version:            0.18.0.0
License:            BSD3
License-file:       LICENSE
Author:             Alberto Ruiz
cabal-version:      >=1.8
build-type:         Simple

library
    build-depends:      base   >= 4.3 && < 5, ghc-prim
    hs-source-dirs:     src
    exposed-modules:    Internal.Vectorized
    c-sources:          src/Internal/C/vector-aux.c
    cc-options:         -O4
